# docs/swagger.json
@@ -51,7 +51,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "GetRateForCurrency",
+                "description": "Exchange",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,11 +61,11 @@
                 "tags": [
                     "Wallets"
                 ],
-                "summary": "GetRateForCurrency",
-                "operationId": "get-rate-for-currency",
+                "summary": "Exchange",
+                "operationId": "exchange",
                 "parameters": [
                     {
-                        "description": "rate input",
+                        "description": "Exchange input",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -328,7 +328,18 @@
             }
         },
         "handlers.exchangeResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "exchanged_amount": {
+                    "type": "number"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "new_balance": {
+                    "$ref": "#/definitions/models.Balance"
+                }
+            }
         },
         "handlers.newBalanceResponse": {
             "type": "object",
